==> linab309/stm32_hdcp_12/stm32_hdcp/app/2014_season1/netLwip/ENC28J60/enc28j60.c <==
#include "includes.h"

uint8_t spi_read_op(uint8_t op, uint8_t address)
{
	int temp;
	ENC28J60_CS_ACTIVE();

	SPI_I2S_SendData(SPI1, (op | (address & ADDR_MASK)));
	while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY)==SET);
	SPI_I2S_ReceiveData(SPI1);
	SPI_I2S_SendData(SPI1, 0x00);
	while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY)==SET);

	/* do dummy read if needed (for mac and mii, see datasheet page 29) */
	if(address & 0x80)
	{
		SPI_I2S_ReceiveData(SPI1);
		SPI_I2S_SendData(SPI1, 0x00);
		while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY)==SET);
	}
	/* release CS */

	temp = SPI_I2S_ReceiveData(SPI1);

	ENC28J60_CS_PASSIVE();

	return (temp);
}

void spi_write_op(uint8_t op, uint8_t address, uint8_t data)
{
	ENC28J60_CS_ACTIVE();
	SPI_I2S_SendData(SPI1, op | (address & ADDR_MASK));
	while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY)==SET);
	SPI_I2S_SendData(SPI1,data);
	while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY)==SET);
	ENC28J60_CS_PASSIVE();
}

void enc28j60_init(void)
{
	uint8_t val;
	ENC28J60_CS_PASSIVE();

	/* perform system reset */
	spi_write_op(ENC28J60_SOFT_RESET, 0, ENC28J60_SOFT_RESET);
	delay_ms(50);
	NextPacketPtr = RXSTART_INIT;

    /* Rx start */
	spi_write(ERXSTL, RXSTART_INIT&0xFF);
	val = spi_read(ERXSTL);
	printf("read ERXSTL=%x\r\n",val);
	spi_write(ERXSTH, RXSTART_INIT>>8);
	/* set receive pointer address */
	spi_write(ERXRDPTL, RXSTOP_INIT&0xFF);
	val = spi_read(ERXRDPTL);
	printf("read ERXRDPTL=%x\r\n",val);
	spi_write(ERXRDPTH, RXSTOP_INIT>>8);
	val = spi_read(ERXRDPTH);
	printf("read ERXRDPTH=%x\r\n",val);
	/* RX end */
	spi_write(ERXNDL, RXSTOP_INIT&0xFF);
	spi_write(ERXNDH, RXSTOP_INIT>>8);

	/* TX start */
	spi_write(ETXSTL, TXSTART_INIT&0xFF);
	spi_write(ETXSTH, TXSTART_INIT>>8);
	/* set transmission pointer address */
	spi_write(EWRPTL, TXSTART_INIT&0xFF);
	spi_write(EWRPTH, TXSTART_INIT>>8);
	/* TX end */
	spi_write(ETXNDL, TXSTOP_INIT&0xFF);
	spi_write(ETXNDH, TXSTOP_INIT>>8);

	/* do bank 1 stuff, packet filter: */
    /* For broadcast packets we allow only ARP packtets */
    /* All other packets should be unicast only for our mac (MAADR) */
    
    /* The pattern to match on is therefore */
    /* Type     ETH.DST */
    /* ARP      BROADCAST */
    /* 06 08 -- ff ff ff ff ff ff -> ip checksum for theses bytes=f7f9 */
    /* in binary these poitions are:11 0000 0011 1111 */
    /* This is hex 303F->EPMM0=0x3f,EPMM1=0x30 */
	spi_write(ERXFCON, ERXFCON_UCEN|ERXFCON_CRCEN|ERXFCON_BCEN);

	/* do bank 2 stuff */
	/* enable MAC receive */
	spi_write(MACON1, MACON1_MARXEN|MACON1_TXPAUS|MACON1_RXPAUS);
	/* enable automatic padding to 60bytes and CRC operations */

	// spi_write_op(ENC28J60_BIT_FIELD_SET, MACON3, MACON3_PADCFG0|MACON3_TXCRCEN|MACON3_FRMLNEN);
	spi_write_op(ENC28J60_BIT_FIELD_SET, MACON3, MACON3_PADCFG0 | MACON3_TXCRCEN | MACON3_FRMLNEN | MACON3_FULDPX);

	/* bring MAC out of reset */
	/* set inter-frame gap (back-to-back) */
	// spi_write(MABBIPG, 0x12);
	spi_write(MABBIPG, 0x15);
	val = spi_read(MABBIPG);
	printf("read MABBIPG=%x\r\n",val);

	spi_write(MACON4, MACON4_DEFER);
	spi_write(MACLCON2, 63);
	val = spi_read(MACLCON2);
	printf("read MACLCON2=%x\r\n",val);

	/* set inter-frame gap (non-back-to-back) */
	spi_write(MAIPGL, 0x12);
	spi_write(MAIPGH, 0x0C);

	/* Set the maximum packet size which the controller will accept */
	/* Do not send packets longer than MAX_FRAMELEN: */
	spi_write(MAMXFLL, MAX_FRAMELEN&0xFF);
	spi_write(MAMXFLH, MAX_FRAMELEN>>8);

    /* do bank 3 stuff */
    /* write MAC address */
    /* NOTE: MAC address in ENC28J60 is byte-backward */
    spi_write(MAADR0, enc28j60_dev->dev_addr[5]);
    spi_write(MAADR1, enc28j60_dev->dev_addr[4]);
    spi_write(MAADR2, enc28j60_dev->dev_addr[3]);
    spi_write(MAADR3, enc28j60_dev->dev_addr[2]);
    spi_write(MAADR4, enc28j60_dev->dev_addr[1]);
    spi_write(MAADR5, enc28j60_dev->dev_addr[0]);

	/* output off */
	spi_write(ECOCON, 0x00);

	// enc28j60_phy_write(PHCON1, 0x00);
	enc28j60_phy_write(PHCON1, PHCON1_PDPXMD); /* full duplex */
    /* no loopback of transmitted frames */
	enc28j60_phy_write(PHCON2, PHCON2_HDLDIS);

	enc28j60_set_bank(ECON2);
	spi_write_op(ENC28J60_BIT_FIELD_SET, ECON2, ECON2_AUTOINC);

	/* switch to bank 0 */
	enc28j60_set_bank(ECON1);
	/* enable interrutps */
	spi_write_op(ENC28J60_BIT_FIELD_SET, EIE, EIE_INTIE|EIE_PKTIE);
	/* enable packet reception */
	spi_write_op(ENC28J60_BIT_FIELD_SET, ECON1, ECON1_RXEN);

	/* clock out */
	// enc28j60_clkout(2);

	enc28j60_phy_write(PHLCON, 0xD76);	//0x476
	delay_ms(20);
}

int8_t enc28j60_tx(struct pbuf* p)
{
    INT8U err;
	struct pbuf* q;
	uint32_t len;
	uint8_t* ptr;

	//printf("tx pbuf: 0x%08x, total len %d \r\n", p, p->tot_len);
	int i;
	if(1)
	{
		printf("send=%d\r\n", p->tot_len);
		for(i=0;i<p->tot_len;i++)
		{
			printf("%02x ", *((uint8_t*)p->payload+i));
			if(i%8 == 7)
				printf(" ");
			if(i%16 == 15)
				printf("\r\n");
		}
		printf("\r\n");
	}

    /* lock enc28j60 */
    OSSemPend(enc28j60_sem_lock,0,&err);	  

    /* disable enc28j60 interrupt */

	/* Set the write pointer to start of transmit buffer area */
	spi_write(EWRPTL, TXSTART_INIT&0xFF);
	spi_write(EWRPTH, TXSTART_INIT>>8);
	/* Set the TXND pointer to correspond to the packet size given */
	spi_write(ETXNDL, (TXSTART_INIT+ p->tot_len + 1) & 0xFF );
	spi_write(ETXNDH, (TXSTART_INIT+ p->tot_len + 1)>>8);

	/* write per-packet control byte (0x00 means use macon3 settings) */
	spi_write_op(ENC28J60_WRITE_BUF_MEM, 0, 0x00);

	for (q = p; q != NULL; q = q->next)
	{
        ENC28J60_CS_ACTIVE();

		SPI_I2S_SendData(SPI1, ENC28J60_WRITE_BUF_MEM);
		while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY)==SET);

		len = q->len;
		ptr = q->payload;
        while(len)
        {
			SPI_I2S_SendData(SPI1,*ptr) ;
			while( SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) == SET );
			ptr++;
			len--;
        }
        ENC28J60_CS_PASSIVE();
	}

	/* send the contents of the transmit buffer onto the network */
	spi_write_op(ENC28J60_BIT_FIELD_SET, ECON1, ECON1_TXRTS);
	/* Reset the transmit logic problem. See Rev. B4 Silicon Errata point 12. */
	if( (spi_read(EIR) & EIR_TXERIF) )
	{
		spi_write_op(ENC28J60_BIT_FIELD_CLR, ECON1, ECON1_TXRTS);
	}

    /* enable enc28j60 interrupt */

	/* unlock enc28j60 */
	OSSemPost(enc28j60_sem_lock);	     /* 发送信号量 */

    return 0;
}

struct pbuf *enc28j60_rx(void)
{
    INT8U err;
	struct pbuf* p;
	uint32_t len = 0;
	uint16_t rxstat;
	uint32_t pk_counter;

    p = NULL;

    /* lock enc28j60 */
    OSSemPend(enc28j60_sem_lock,0,&err);	  
    /* disable enc28j60 interrupt */

    pk_counter = spi_read(EPKTCNT);
    if (pk_counter)
    {
        /* Set the read pointer to the start of the received packet */
        spi_write(ERDPTL, (NextPacketPtr));
        spi_write(ERDPTH, (NextPacketPtr)>>8);

        /* read the next packet pointer */
        NextPacketPtr  = spi_read_op(ENC28J60_READ_BUF_MEM, 0);
        NextPacketPtr |= spi_read_op(ENC28J60_READ_BUF_MEM, 0)<<8;

        /* read the packet length (see datasheet page 43) */
        len  = spi_read_op(ENC28J60_READ_BUF_MEM, 0);	    /* 0x54 */
        len |= spi_read_op(ENC28J60_READ_BUF_MEM, 0) <<8;	/* 5554 */

        len -= 4; /* remove the CRC count */

        /* read the receive status (see datasheet page 43) */
        rxstat  = spi_read_op(ENC28J60_READ_BUF_MEM, 0);
        rxstat |= ((uint16_t)spi_read_op(ENC28J60_READ_BUF_MEM, 0))<<8;

        /* check CRC and symbol errors (see datasheet page 44, table 7-3): */
        /* The ERXFCON.CRCEN is set by default. Normally we should not */
        /* need to check this. */
        if ( (rxstat & 0x80) == 0 )
        {
            /* invalid */
            len = 0;
        }
        else
        {
            /* allocation pbuf */
            p = pbuf_alloc(PBUF_LINK, len, PBUF_RAM);
            if (p != NULL )
            {
                uint8_t* data;
                struct pbuf* q;

                for (q = p; q != NULL; q= q->next)
                {
                    data = q->payload;
                    len = q->len;

                    ENC28J60_CS_ACTIVE();

                    SPI_I2S_SendData(SPI1,ENC28J60_READ_BUF_MEM);
                    while( SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) == SET );

                    SPI_I2S_ReceiveData(SPI1);

                    while(len)
                    {
                        len--;
                        SPI_I2S_SendData(SPI1,0x00)	;
                        while( SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) == SET );

                        *data = SPI_I2S_ReceiveData(SPI1);
                        data++;
                    }

                    ENC28J60_CS_PASSIVE();
                }
            }
        }

        /* Move the RX read pointer to the start of the next received packet */
        /* This frees the memory we just read out */
        spi_write(ERXRDPTL, (NextPacketPtr));
        spi_write(ERXRDPTH, (NextPacketPtr)>>8);

        /* decrement the packet counter indicate we are done with this packet */
        spi_write_op(ENC28J60_BIT_FIELD_SET, ECON2, ECON2_PKTDEC);
    }
	else
	{
		/* switch to bank 0 */
		enc28j60_set_bank(ECON1);
		/* enable packet reception */
		spi_write_op(ENC28J60_BIT_FIELD_SET, ECON1, ECON1_RXEN);

	}

    /* enable enc28j60 interrupt */

	/* unlock enc28j60 */
	OSSemPost(enc28j60_sem_lock);	     /* 发送信号量 */
	if(1 && p)
	{
		int i;
		printf("receive=%d\r\n", p->len);
		for(i=0;i<p->len;i++)
		{
			printf("%02x ", *((uint8_t*)p->payload+i));
			if(i%8 == 7)
				printf(" ");
			if(i%16 == 15)
				printf("\r\n");
		}
		printf("\r\n");
		//printf("read=%d\r\n",p->len);
	}

    return p;
}
